WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188130
[Curl] Fix the bug when client reject the redirect on WebKitLegacy.
https://bugs.webkit.org/show_bug.cgi?id=188130
Summary
[Curl] Fix the bug when client reject the redirect on WebKitLegacy.
Basuke Suzuki
Reported
2018-07-27 16:08:38 PDT
When ResourceHandleClient rejects redirection by passing empty request to the completion handler, it should exit immediately. NetworkDataTask do the right thing already. WebKitLegacy bug.
Attachments
PATCH
(2.92 KB, patch)
2018-07-27 17:09 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
PATCH
(2.92 KB, patch)
2018-07-27 17:36 PDT
,
Basuke Suzuki
darin
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews206 for win-future
(13.14 MB, application/zip)
2018-07-28 13:15 PDT
,
EWS Watchlist
no flags
Details
LANDING
(2.92 KB, patch)
2018-07-29 08:38 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2018-07-27 17:09:47 PDT
Created
attachment 345977
[details]
PATCH
Basuke Suzuki
Comment 2
2018-07-27 17:36:17 PDT
Created
attachment 345980
[details]
PATCH
EWS Watchlist
Comment 3
2018-07-28 13:15:15 PDT
Comment on
attachment 345980
[details]
PATCH
Attachment 345980
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/8684766
New failing tests: http/tests/security/canvas-remote-read-remote-video-blocked-no-crossorigin.html
EWS Watchlist
Comment 4
2018-07-28 13:15:26 PDT
Created
attachment 345997
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Basuke Suzuki
Comment 5
2018-07-29 08:38:56 PDT
Created
attachment 346031
[details]
LANDING Thanks Darin for r+
WebKit Commit Bot
Comment 6
2018-07-29 09:18:40 PDT
Comment on
attachment 346031
[details]
LANDING Clearing flags on attachment: 346031 Committed
r234346
: <
https://trac.webkit.org/changeset/234346
>
WebKit Commit Bot
Comment 7
2018-07-29 09:18:42 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-07-29 09:20:17 PDT
<
rdar://problem/42709525
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug